recursion.lessons.recursion.tree.Tree.scala.error
Tree:7: error: ';' expected but 'else' found.
	else if 
        ^Tree:9: error: ')' expected but ';' found.
		tree(steps-1,shrink*length,droite(angle);
                                                        ^Tree:11: error: ')' expected but ';' found.
		tree(steps-1,shrink*length,gauche(angle);
                                                        ^